--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
             <a href="#"> Wilson Joffre </a>
 
         </nav>
-
     </header>
+    <main class="graficos-section">
+  
+</section>
+</main>
+<footer> 
+    <p>Desenvolvido por Kai na turma do 3E</p>
+ </footer> 
+ <script type="module" src="graficos/informacoesGlobais.js"*> 
+ </script>
 </body>
 </html>
